--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
             <section class="info">
               <a name="portfolio"></a>
                 <div class="slider slider-fade">
-                    <!-- Portfolio 1-->
+                    <!-- Project 1-->
   
                     <article class="slide">
                       <div class="slide-content">
                         <h2 class="slide-heading">
-                          <span class="slide-title">Application for Veterinary Clinic</span>
+                          <span class="slide-title">Web Application for Veterinary Clinic</span>
                         </h2>
                         <a class="slide-more" href="https://github.com/karinazz/vetapp" target="_blank">Check source</a>
                       </div>
@@ -140,12 +140,12 @@
                     </article>
 
                     
-                    <!-- Portfolio 2-->
+                    <!-- Project 2-->
 
                     <article class="slide">
                       <div class="slide-content">
                         <h2 class="slide-heading">
-                          <span class="slide-title">Portfolio 2</span>
+                          <span class="slide-title">Project 2</span>
                         </h2>
                         <a class="slide-more" href="#" target="_blank">Check source</a>
                       </div>
@@ -165,7 +165,7 @@
                     <article class="slide">
                       <div class="slide-content">
                         <h2 class="slide-heading">
-                          <span class="slide-title">Portfolio 3</span>
+                          <span class="slide-title">Project 3</span>
                         </h2>
                         <a class="slide-more" href="#" target="_blank">Check source</a>
                       </div>
@@ -180,12 +180,12 @@
                       </figure>
                     </article>
 
-                    <!-- Portfolio 4-->
+                    <!-- Project 4-->
 
                     <article class="slide">
                       <div class="slide-content">
                         <h2 class="slide-heading">
-                          <span class="slide-title">Portfolio 4</span>
+                          <span class="slide-title">Project 4</span>
                         </h2>
                         <a class="slide-more" href="#" target="_blank">Check source</a>
                       </div>
@@ -200,12 +200,12 @@
                       </figure>
                     </article>
 
-                    <!-- Portfolio 5-->
+                    <!-- Project 5-->
 
                     <article class="slide">
                       <div class="slide-content">
                         <h2 class="slide-heading">
-                          <span class="slide-title">Portfolio 5</span>
+                          <span class="slide-title">Project 5</span>
                         </h2>
                         <a class="slide-more" href="#" target="_blank">Check source</a>
                       </div>
